--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "build-index": "tsx scripts/build-index.ts",
+    "create-test-index": "tsx scripts/create-test-index.ts",
+    "test-frontend": "tsx scripts/test-frontend-integration.ts",
+    "update-identifiers": "tsx scripts/update-test-index-identifiers.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
+    "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.1",
     "fuse.js": "^7.1.0",
     "ky": "^1.9.0",
     "luxon": "^3.7.1",
@@ -22,19 +32,22 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "realtime-bpm-analyzer": "^4.0.2",
-    "wavesurfer.js": "^7.10.1"
+    "wavesurfer.js": "^7.10.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^2.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.0.0"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
